<resources>
    <string name="app_name">"6Dgrees"</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_up_legal_warning">By signing up, you agree to the Terms of Service\n and Privacy Policy.</string>

    <string name="already_have">Already have an account? Login</string>
    <string name="lorem_ipsum">Already have an account? Login</string>

    <string name="placeholder_holder_name">Name</string>
    <string name="placeholder_phone">phone</string>
    <string name="placeholder_holder_password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="placeholder_confirm_password">confirm password</string>
    <string name="placeholder_last_name">last name</string>
    <string name="placeholder_password">password</string>
    <string name="placeholder_email">Email</string>
    <string name="last_name_error">last name cannot be empty</string>
    <string name="first_name_error">first name cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_otp">One time pin</string>

    <!--Verify 2fa-->
    <string name="enter_code">Enter your Verification Code</string>
    <string name="resend_code">I didn’t received the code? Send again</string>
    <string name="code_sent">We send verification code to your \nemail brajaoma*****@gmail.com. You can \ncheck your inbox.</string>
    <string name="placeholder_timer">0:00</string>
    <string name="verification">Verification</string>
    <string name="fragment_verification_label">Verification Fragment</string>
    <string name="verify">Verify</string>

    <!--Login Strings-->
    <string name="login_fragment_label">Login Fragment</string>

    <string name="accesibility_image_of_paper">image of paper</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="error_blank_field">this field can\'t be empty</string>
    <string name="error_blank_password_field">password cant be empty</string>
    <string name="dont_have_account">Don\'t have an account yet? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>


</resources>